<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="details"
            type="com.example.movieapp.data.model.MovieDetailsResponse" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:visibility="@{isLoading ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_movie_detail_upper_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_movie_poster"
                        android:layout_width="240dp"
                        android:layout_height="360dp"
                        android:downloadUrl="@{details.poster}"
                        tools:srcCompat="@tools:sample/avatars" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/ll_movie_info_container"
                        android:layout_width="match_parent"
                        android:layout_height="360dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            style="@style/headerTextStyle1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{details.runtime}" />

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/descriptionTextStyle1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/duration" />

                        <TextView
                            android:id="@+id/textView3"
                            style="@style/headerTextStyle1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{details.year}" />

                        <TextView
                            android:id="@+id/textView4"
                            style="@style/descriptionTextStyle1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/year" />

                        <TextView
                            android:id="@+id/textView5"
                            style="@style/headerTextStyle1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{details.language}"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView6"
                            style="@style/descriptionTextStyle1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language" />

                        <TextView
                            android:id="@+id/textView7"
                            style="@style/headerTextStyle1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{@string/imdb_rating(details.imdbRating)}" />

                        <TextView
                            android:id="@+id/textView8"
                            style="@style/descriptionTextStyle1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_movie_detail_bottom_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        style="@style/headerTextStyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plot" />

                    <TextView
                        android:id="@+id/textView10"
                        style="@style/descriptionTextStyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{details.plot}" />

                    <TextView
                        android:id="@+id/textView11"
                        style="@style/headerTextStyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/director" />

                    <TextView
                        android:id="@+id/textView12"
                        style="@style/descriptionTextStyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{details.director}" />

                    <TextView
                        android:id="@+id/textView13"
                        style="@style/headerTextStyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/writer" />

                    <TextView
                        android:id="@+id/textView14"
                        style="@style/descriptionTextStyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{details.writer}" />

                    <TextView
                        android:id="@+id/textView15"
                        style="@style/headerTextStyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actors" />

                    <TextView
                        android:id="@+id/textView16"
                        style="@style/descriptionTextStyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{details.actors}" />

                    <TextView
                        android:id="@+id/textView17"
                        style="@style/headerTextStyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country" />

                    <TextView
                        android:id="@+id/textView18"
                        style="@style/descriptionTextStyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{details.country}" />

                    <TextView
                        android:id="@+id/textView19"
                        style="@style/headerTextStyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/box_office" />

                    <TextView
                        android:id="@+id/textView20"
                        style="@style/descriptionTextStyle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{details.boxOffice}" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

        <ProgressBar
            android:id="@+id/pb_movie_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>